# Vigil

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  docker-compose.yml  init.sql  main.py  pyproject.toml  start.py
bot/: .dockerignore  __init__.py  bot.py  context.py  pyproject.toml  routers.py  start.py
bot/keyboards/: actions.py  answers.py  button_part.py  keyboard.py  responds.py
bot/routers/: __init__.py  base.py  buttons.py  commands.py  messages.py  utils.py
bot/rules/: buttons.py  commands.py  messages.py  reactions.py
bot/src/: __init__.py  bot.py  context.py
bot/src/keyboards/: __init__.py  actions.py  answers.py  button_part.py  keyboard.py
bot/src/routers/: __init__.py  base.py  buttons.py  commands.py  messages.py  reactions.py  rules.py
config/: __init__.py  bot.py  chache.py  database.py  (+1 more)
web/: Dockerfile  app.py  pyproject.toml  start.py
web/auth/: __init__.py  auth.py  functions.py  jwt.py
web/routes/: __init__.py  auth.py  health.py  index.py  pages.py  peers.py  queue.py  sanctions.py  settings.py  staff.py
web/static/: site.webmanifest
web/static/css/: conversations.css  includes.css  index.css  login.css  staff.css  style.css
web/static/js/: conversations.js  peers.js  queue.js  sanctions.js  settings.js  staff.js
web/templates/: base.html  conversations.html  index.html  login.html  peers.html  queue.html  sanctions.html  settings.html  staff.html  warns.html
web/templates/includes/: base.html
web/templates/includes/footer/: author.html  company.html
web/templates/includes/header/: buttons.html  logo.html
(+13 files in other folders)
