[tool.poetry]
package-mode = false
name = "bot"
authors = ["Oidaho <oidaho.main@yandex.ru>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.12"
vk-api = "^11.9.9"
loguru = "^0.7.3"
peewee = "^3.17.8"
pydantic-settings = "^2.6.1"
pytz = "^2024.2"
psycopg2-binary = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
