[tool.poetry]
package-mode = false
name = "web"
authors = ["Oidaho <oidaho.main@yandex.ru>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
peewee = "^3.17.8"
uvicorn = "^0.34.0"
jinja2 = "^3.1.5"
pydantic-settings = "^2.6.1"
pydantic = "^2.10.5"
python-multipart = "^0.0.20"
pyjwt = "^2.10.1"
bcrypt = "^4.2.1"
psycopg2-binary = "^2.9.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
